syntax = "proto3";

package auth;

enum AuthStatus {
  AUTHENTICATED = 0;
  EXPIRED = 1;
  UNAUTHENTICATED = 2;
}

message ValidateAccessTokenReq {
  string token = 1;
}

message ValidateAccessTokenRes {
  AuthStatus status = 1;
  int32 uid = 2;
}

message GetAccessTokenReq {
  int32 uid = 1;
}

message GetAccessTokenRes {
  string token = 1;
}

service Auth {
  rpc GetAccessToken(GetAccessTokenReq) returns (GetAccessTokenRes);
  rpc ValidateAccessToken(ValidateAccessTokenReq) returns (ValidateAccessTokenRes);
}